--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,19 @@
 .App {
   text-align: center;
+  margin: 0;
+  padding: 0;
+  border: 0;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+.container {
+  max-width: 1440px;
+  margin-left: 70px;
+  margin-right: 70%;
 }
 
 @media (prefers-reduced-motion: no-preference) {
