--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
   --InkBlue: #0a4b65;
   --border: #d9d9d9;
   --white100: #ffffff;
+  --whiteF2: #F2F2F2;
 }
 
 body,
@@ -20,6 +21,10 @@ html {
   pointer-events: none;
 }
 
+a {
+  text-decoration: none;
+  color: var(--InkBlue);
+}
 .container {
   max-width: 1440px;
   width: calc(100% - 140px);
