--- a/src/components/MenuSecond/MenuSecond.css
+++ b/src/components/MenuSecond/MenuSecond.css
@@ -5,12 +5,12 @@
   align-items: center;
 }
 
-
 .MenuSecond-ul {
   display: flex;
   align-items: center;
   flex-direction: row;
   justify-content: space-evenly;
+  z-index: 100;
 }
 
 .MenuSecond-ul li {
@@ -48,25 +48,24 @@
   padding: 0;
   display: flex;
   row-gap: 7px;
-
+  border-radius: 10px;
 }
 .Dropdown-children-ul li {
-    transition: all ease-in-out 100ms;
+  transition: all ease-in-out 100ms;
 }
 .Dropdown-children-ul li a {
-    display: block;
-    width: 100%;
-    height: 100%;
-    cursor: pointer;
+  display: block;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
 }
 
-.Dropdown-children-ul li:hover{ 
-    background-color: #f9f9f9;
+.Dropdown-children-ul li:hover {
+  background-color: #f9f9f9;
 }
 .Dropdown-children-ul-closed {
   display: none;
 }
-
 
 .Dropdown-children-ul-open {
   animation: ul-open forwards 400ms ease-in-out;
@@ -86,13 +85,9 @@
   }
 }
 
-
 /* responsive */
 @media screen and (max-width: 992px) {
-    .MenuSecondTop {
-       display: none;
-      }
-      
-      
-     
+  .MenuSecondTop {
+    display: none;
   }
+}
