--- a/src/Pages/Header/HeaderThree/HeaderThree.css
+++ b/src/Pages/Header/HeaderThree/HeaderThree.css
@@ -120,7 +120,28 @@
 
   color: var(--InkBlue);
 }
-
+.productsCount-div {
+  display: flex;
+  align-items: flex-start;
+  position: relative;
+  justify-content: center;
+}
+.productsCount {
+  position: absolute;
+  right: -7px;
+  top: -11px;
+  background-color: var(--StormyStraitGreen);
+  color: var(--white100);
+  border: solid 1px var(--StormyStraitGreen);
+  border-radius: 100%;
+  padding: 0px 4px;
+  
+  font-family: 'Cairo';
+font-style: normal;
+font-weight: 600;
+font-size: 16px;
+line-height: 18px;
+}
 /* responsive */
 @media screen and (max-width: 768px) {
   .SignUp-SignIn {
