--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
   --border: #d9d9d9;
   --white100: #ffffff;
   --whiteF2: #F2F2F2;
+  --whiteFc: #fcfcfc;
   --StormyStraitGreen: #0d988c;
   --black:#000000;
 }
