--- a/src/Pages/Home/FirstCategoty/FirstCategoty.css
+++ b/src/Pages/Home/FirstCategoty/FirstCategoty.css
@@ -1,5 +1,6 @@
 .FirstCategoty {
   margin-top: 54px;
+  margin-bottom: 41px;
 }
 
 .FirstCategoty h2 {
@@ -11,6 +12,7 @@
 
   color: var(--StormyStraitGreen);
   text-align: left;
+  padding-bottom: 10px;
 }
 
 .FirstCategotyOne {
@@ -31,9 +33,31 @@
   display: flex;
   flex-direction: row;
   column-gap: 26px;
-  overflow-x: auto ;
+  overflow-x: auto;
 }
 
 .FirstCategoty-products::-webkit-scrollbar {
   width: 0;
+}
+
+@media screen and (max-width: 480px) {
+  .FirstCategoty h2 {
+    font-family: "Cairo";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 30px;
+
+    color: var(--StormyStraitGreen);
+    text-align: left;
+    padding-bottom: 10px;
+  }
+  .FirstCategotyOne a {
+    font-family: "Cairo";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 13px;
+    line-height: 30px;
+    color: #fcd635;
+  }
 }
