--- a/src/Pages/product/ProductDetails.css
+++ b/src/Pages/product/ProductDetails.css
@@ -7,10 +7,11 @@
   margin-top: 63px;
   display: flex;
   flex-direction: row;
+  margin-bottom: 56px;
 }
 
 .ProductDetailsImg {
-  background-color: aqua;
+  /* background-color: aqua; */
   flex-basis: 15%;
   max-width: 15%;
   display: flex;
@@ -25,7 +26,7 @@
 }
 
 .ProductDetailsImgPremier {
-  background-color: rgb(3, 17, 17);
+  /* background-color: rgb(3, 17, 17); */
   flex-basis: 30%;
   max-width: 30%;
   position: relative;
@@ -39,7 +40,374 @@
   left: 0px;
 }
 .ProductDetailsAction {
-  background-color: rgb(103, 248, 152);
-  flex-basis: 55%;
-  max-width: 55%;
+  /* background-color: rgb(103, 248, 152); */
+  flex-basis: calc(55%- 42px);
+  max-width: calc(55%- 42px);
+  text-align: start;
+  margin-left: 42px;
+}
+
+/* name */
+.ProductDetailsAction h1 {
+  color: #0a4b65;
+  font-size: 36px;
+  font-family: Cairo;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  margin-top: 43px;
+  margin-bottom: 0;
+}
+
+.ProductDetails-Rating {
+  display: flex;
+
+  .product-Rating-star {
+    color: #151875;
+    font-size: 14px;
+    font-family: Cairo;
+    font-style: normal;
+    font-weight: 200;
+    line-height: 29px;
+    text-transform: capitalize;
+  }
+}
+.ProductDetails-Categories {
+  color: #0a4b65;
+  font-size: 16px;
+  font-family: Cairo;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 29px;
+  margin-top: 26px;
+}
+
+/* input  Quantity */
+.ProductDetails-Quantity {
+  width: 65px;
+  height: 19.118px;
+  margin-top: 15.9px;
+  display: flex;
+  flex-direction: row;
+}
+.ProductDetails-Quantity span {
+  cursor: pointer;
+}
+.ProductDetails-Quantity input {
+  width: 35px;
+  height: inherit;
+  border: none;
+  outline: none;
+  background: rgba(13, 152, 140, 0.5);
+  padding: 0;
+  text-align: center;
+}
+
+/* Chrome, Safari, Edge, Opera */
+.ProductDetails-Quantity input::-webkit-outer-spin-button,
+.ProductDetails-Quantity input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+.ProductDetails-Quantity input[type="number"] {
+  -moz-appearance: textfield;
+}
+.ProductDetails-Quantity-increased {
+  width: 15.294px;
+  height: 19.118px;
+  background: #0d988c;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.ProductDetails-Quantity-decreased {
+  width: 15.294px;
+  height: 19.118px;
+  background: #0d988c;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.ProductDetails-Quantity-decreased img {
+  position: absolute;
+  padding-bottom: 1px;
+}
+/* ProductDetails-Share */
+.ProductDetails-Share {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  column-gap: 22px;
+  margin-top: 45px;
+}
+.ProductDetails-Share span {
+  color: var(--InkBlue);
+  font-size: 16px;
+  font-family: Cairo;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 29px;
+}
+
+.ProductDetails-Share a img {
+  width: 23.622px;
+  height: 23.245px;
+}
+.ProductDetails-Share-imgs {
+  display: flex;
+  align-items: center;
+  column-gap: 10.5px;
+}
+.ProductDetails-Share-imgs a {
+  display: flex;
+  align-items: center;
+}
+
+.ProductDetails-Add {
+  column-gap: 14px;
+  display: flex;
+  flex-direction: row;
+  margin-top: 24px;
+}
+
+.ProductDetails-AddCart {
+  width: 220px;
+  height: 42px;
+  border-radius: 20px;
+  background: #0a4b65;
+  color: var(--white100);
+  font-size: 16px;
+  font-family: Cairo;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 29px;
+  text-transform: capitalize;
+  border: none;
+  cursor: pointer;
+}
+
+.ProductDetails-AddWish {
+  width: 220px;
+  height: 42px;
+  border-radius: 20px;
+  border: 1px solid var(--InkBlue);
+  background: #fff;
+  color: var(--InkBlue);
+  font-size: 16px;
+  font-family: Cairo;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 29px;
+  text-transform: capitalize;
+  cursor: pointer;
+}
+
+/* ProductDetails Tow */
+
+.ProductDetailsInstTowTop {
+  width: 100%;
+  height: 649px;
+  background: #f0f5f9;
+}
+.ProductDetails-RelatedProducts h3 {
+  color: #101750;
+  text-align: start;
+  font-size: 36px;
+  font-family: Cairo;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  margin: 24px 0;
+}
+.ProductDetails-RelatedProducts h2,
+.ProductDetails-RelatedProducts .productGroupScroallLeftOne-categoty-a {
+  display: none;
+}
+
+.ProductDetails-RelatedProducts .productGroupScroallLeft {
+  margin-top: 0;
+}
+
+/*  responsive */
+.ProductDetails-title-mobile,
+.ProductDetails-Quantity-mobile {
+  display: none;
+}
+
+@media screen and (max-width: 992px) {
+  .ProductDetailsImgPremier {
+    display: flex;
+    align-items: center;
+  }
+  .ProductDetailsImgPremier img {
+    bottom: auto;
+  }
+  .ProductDetailsImg {
+    justify-content: space-evenly;
+  }
+  .ProductDetails-Add {
+    width: calc(100% - 14px);
+  }
+}
+
+@media screen and (max-width: 728px) {
+  .ProductDetails {
+    max-width: 1170px;
+    height: auto;
+    border-radius: 2px;
+    background: #fff;
+    box-shadow: 0px 0px 25px 10px #f6f4fd;
+    margin-top: 63px;
+    display: flex;
+    flex-direction: column;
+  }
+  .ProductDetails-title-mobile {
+    display: block;
+    color: #0a4b65;
+    text-align: start;
+    font-size: 15px;
+    font-family: Cairo;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    order: 1;
+  }
+  .ProductDetailsImgPremier {
+    width: 100%;
+    order: 2;
+    flex-basis: 100%;
+    max-width: 100%;
+    justify-content: center;
+  }
+
+  .ProductDetailsImg {
+    order: 3;
+  }
+  .ProductDetailsAction {
+    order: 4;
+    margin-left: 0;
+  }
+
+  .ProductDetailsImgPremier img {
+    position: static;
+    left: auto;
+    max-width: 193px;
+    max-height: 223px;
+  }
+
+  .ProductDetails {
+    background: none;
+    box-shadow: none;
+    margin-top: 6px;
+  }
+
+  .ProductDetailsImg {
+    flex-basis: 100%;
+    max-width: 81px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    max-height: 26px;
+    margin: auto;
+  }
+  .ProductDetailsImg img {
+    max-width: 27px;
+    max-height: 26px;
+  }
+  .ProductDetailsAction h1 {
+    display: none;
+  }
+  .ProductDetails-Rating {
+    margin-top: 43px;
+  }
+
+  .ProductDetails-Share a img {
+    width: 17.837px;
+    height: 17.552px;
+  }
+  .ProductDetails-Share span {
+    color: var(--InkBlue);
+    font-size: 16px;
+    font-family: Cairo;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 29px;
+  }
+
+  /* input  Quantity */
+  .ProductDetails-Share {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    column-gap: 7px;
+    margin-top: 20px;
+    position: relative;
+  }
+  .ProductDetails-Quantity {
+    display: none;
+  }
+  .ProductDetails-Quantity-mobile {
+    width: 99px;
+    height: 29.118px;
+    margin-top: 0;
+    display: flex;
+    flex-direction: row;
+    position: absolute;
+    right: 0;
+  }
+  .ProductDetails-Quantity-mobile span {
+    cursor: pointer;
+  }
+  .ProductDetails-Quantity-mobile input {
+    width: 52px;
+    height: inherit;
+    border: none;
+    outline: none;
+    background: rgba(13, 152, 140, 0.5);
+    padding: 0;
+    text-align: center;
+  }
+
+  /* Chrome, Safari, Edge, Opera */
+  .ProductDetails-Quantity-mobile input::-webkit-outer-spin-button,
+  .ProductDetails-Quantity-mobile input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
+  /* Firefox */
+  .ProductDetails-Quantity-mobile input[type="number"] {
+    -moz-appearance: textfield;
+  }
+  .ProductDetails-Quantity-increased-mobile {
+    width: 23.294px;
+    height: 29.118px;
+    background: #0d988c;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .ProductDetails-Quantity-decreased-mobile {
+    width: 23.294px;
+    height: 29.118px;
+    background: #0d988c;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .ProductDetails-Quantity-decreased-mobile img {
+    position: absolute;
+    padding-bottom: 1px;
+  }
+
+  .ProductDetails-Add {
+    width: calc(100% - 9px);
+    column-gap: 9px;
+    display: flex;
+    flex-direction: row;
+    margin-top: 24px;
+    justify-content: space-evenly;
+  }
 }
