--- a/src/Pages/product/ProductDetails.css
+++ b/src/Pages/product/ProductDetails.css
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: row;
   margin-bottom: 56px;
+  justify-content: space-evenly;
 }
 
 .ProductDetailsImg {
@@ -16,33 +17,38 @@
   max-width: 15%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  max-height: 100%;
+  justify-content: flex-start;
+  max-height: 500px;
+  overflow: hidden;
+  align-items: center;
+  margin-top: 3px;
 }
 .ProductDetailsImg img {
   max-height: 155px;
-  max-width: 100%;
+  max-width: 200px;
   cursor: pointer;
+  transition: ease-in-out 400ms;
+  object-fit: cover;
+  width: 100%;
 }
 
 .ProductDetailsImgPremier {
-  /* background-color: rgb(3, 17, 17); */
-  flex-basis: 30%;
-  max-width: 30%;
-  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-basis: calc(30% - 4px);
+  max-width: calc(30% - 4px);
+  padding-left: 4px;
 }
 .ProductDetailsImgPremier img {
   max-height: 487px;
   max-width: 100%;
   cursor: pointer;
-  position: absolute;
-  bottom: 9px;
-  left: 0px;
 }
 .ProductDetailsAction {
   /* background-color: rgb(103, 248, 152); */
-  flex-basis: calc(55%- 42px);
-  max-width: calc(55%- 42px);
+  flex-basis: calc(55% - 42px);
+  max-width: calc(55% - 42px);
   text-align: start;
   margin-left: 42px;
 }
@@ -57,6 +63,10 @@
   line-height: normal;
   margin-top: 43px;
   margin-bottom: 0;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  max-width: 100%;
 }
 
 .ProductDetails-Rating {
@@ -208,7 +218,6 @@
 
 .ProductDetailsInstTowTop {
   width: 100%;
-  height: 649px;
   background: #f0f5f9;
 }
 .ProductDetails-RelatedProducts h3 {
@@ -280,6 +289,8 @@
     flex-basis: 100%;
     max-width: 100%;
     justify-content: center;
+    min-height: 250px;
+    padding-left: 0px;
   }
 
   .ProductDetailsImg {
@@ -288,6 +299,8 @@
   .ProductDetailsAction {
     order: 4;
     margin-left: 0;
+    flex-basis: 100%;
+    max-width: 100%;
   }
 
   .ProductDetailsImgPremier img {
@@ -295,6 +308,10 @@
     left: auto;
     max-width: 193px;
     max-height: 223px;
+  }
+  .ProductDetailsImgBorder {
+    border-radius: 3px;
+    border: 1px solid #0a4b65;
   }
 
   .ProductDetails {
@@ -305,10 +322,9 @@
 
   .ProductDetailsImg {
     flex-basis: 100%;
-    max-width: 81px;
+    max-width: 230px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     max-height: 26px;
     margin: auto;
   }
@@ -409,5 +425,14 @@
     flex-direction: row;
     margin-top: 24px;
     justify-content: space-evenly;
+  }
+
+  .ProductDetails-RelatedProducts h3 {
+    font-size: 16px;
+    font-family: Cairo;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    margin: 16px 0;
   }
 }
