--- a/src/Pages/product/tabs/ProductDetailsTabs.css
+++ b/src/Pages/product/tabs/ProductDetailsTabs.css
@@ -14,3 +14,34 @@
   background-color: #151875 !important;
   bottom: 21px !important;
 }
+
+.ProductDetailsTabs-Video .css-19kzrtu {
+  padding: 0;
+}
+/*  responsive */
+@media screen and (max-width: 728px) {
+  .ProductDetailsTabs-Title {
+    color: var(--text) !important;
+    font-size: 16px !important;
+    font-family: Cairo !important;
+    font-style: normal !important;
+    font-weight: 500 !important;
+    line-height: normal !important;
+    margin: 12px 4px !important;
+    min-width: 45px !important;
+    text-transform: none !important;
+  }
+}
+@media screen and (max-width: 320px) {
+  .ProductDetailsTabs-Title {
+    color: var(--text) !important;
+    font-size: 13px !important;
+    font-family: Cairo !important;
+    font-style: normal !important;
+    font-weight: 500 !important;
+    line-height: normal !important;
+    margin: 12px 4px !important;
+    min-width: 45px !important;
+    text-transform: none !important;
+  }
+}
