--- a/src/Pages/product/ProductDetails.css
+++ b/src/Pages/product/ProductDetails.css
@@ -111,6 +111,11 @@
   background: rgba(13, 152, 140, 0.5);
   padding: 0;
   text-align: center;
+  text-align: -webkit-center;
+  color: #fff;
+  font-size: 20px;
+  font-family: Cairo;
+  font-weight: 500;
 }
 
 /* Chrome, Safari, Edge, Opera */
@@ -219,6 +224,8 @@
 .ProductDetailsInstTowTop {
   width: 100%;
   background: #f0f5f9;
+  min-height: 300px;
+  transition: ease-in-out 400ms;
 }
 .ProductDetails-RelatedProducts h3 {
   color: #101750;
@@ -243,8 +250,23 @@
 .ProductDetails-title-mobile,
 .ProductDetails-Quantity-mobile {
   display: none;
-}
 
+ 
+}
+.ProductDetails-Quantity-mobile input {
+  width: 35px;
+  height: inherit;
+  border: none;
+  outline: none;
+  background: rgba(13, 152, 140, 0.5);
+  padding: 0;
+  text-align: center;
+  text-align: -webkit-center;
+  color: #fff;
+  font-size: 20px;
+  font-family: Cairo;
+  font-weight: 500;
+}
 @media screen and (max-width: 992px) {
   .ProductDetailsImgPremier {
     display: flex;
