--- a/src/Pages/categoty/Categoty.css
+++ b/src/Pages/categoty/Categoty.css
@@ -167,7 +167,7 @@
   line-height: 30px;
 }
 /* Filter By Color */
-.Product-filter-Color-Form  {
+.Product-filter-Color-Form {
   flex-direction: row !important;
 }
 .Product-filter-Color label span {
@@ -238,7 +238,74 @@
 .CheckedboxSky {
   border: 3px solid #000;
 }
+/* filter-Mobile */
+.displayFlex {
+  display: flex !important;
+  animation: in forwards 400ms ease-in-out;
+}
+@keyframes in {
+  0% {
+    transform: translateX(-50%);
+  }
+  100% {
+    transform: translateX(0);
+    display: none;
+  }
+}
+@keyframes out {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+    display: none;
+  }
+}
 
+.animationOutLeft {
+  animation: out forwards 400ms ease-in-out;
+}
+
+.overflowHidden {
+  overflow: hidden;
+}
+.CategotyPage-product-filter-Mobile-btn {
+  height: 100px;
+  display: flex;
+  align-items: center;
+  margin-left: 25px;
+  column-gap: 12px;
+}
+.filter-Mobile-filterby {
+  width: 96px;
+  height: 28px;
+  background-color: #fff;
+  border-radius: 50px;
+  border: none;
+  color: #0a4b65;
+  font-family: Cairo;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  cursor: pointer;
+  white-space: nowrap;
+}
+.filter-Mobile-btn-style {
+  color: #0a4b65;
+  font-family: Cairo;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 30px;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  white-space: nowrap;
+}
+.filter-Mobile-Drawer-CloseIcon {
+  display: none;
+}
 /* responsive */
 @media screen and (max-width: 728px) {
   .CategotyPage-product {
@@ -249,11 +316,48 @@
     display: none;
     flex-basis: 0%;
     max-width: 0%;
-    background-color: aqua;
   }
+  /* CategotyPage-product-filter-Mobile */
   .CategotyPage-product-filter-Mobile {
     display: block;
-    background-color: aqua;
+    background: #f0f5f9;
+  }
+  .CategotyPage-product-filter-Mobile-Drawer {
+    justify-content: flex-start;
+
+    z-index: 10;
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    right: 0;
+
+    transform: translateX(-100%);
+  }
+
+  .CategotyPage-product-filter-Mobile-Drawer .CategotyPage-product-filter {
+    display: block;
+    flex-basis: 100%;
+    max-width: 250px;
+    padding-bottom: 50px;
+    position: relative;
+    background-color: #fff;
+    padding-left: 16px;
+    position: fixed;
+    padding-bottom: 30px;
+    position: fixed;
+    overflow-y: scroll;
+    z-index: 11;
+    height: 100vh;
+  }
+  .filter-Mobile-Drawer-CloseIcon {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    color: red;
+    cursor: pointer;
+    display: inline;
   }
 }
 
@@ -263,5 +367,12 @@
   }
   .Categoty-Category {
     background: var(--white100);
+  }
+  .CategotyPage-product-filter-Mobile-btn {
+    height: 100px;
+    display: flex;
+    align-items: center;
+    margin-left: 5px;
+    column-gap: 0;
   }
 }
