--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -3,7 +3,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  z-index: -1;
+  z-index: 1;
 }
 .welcomePhoto img {
   height: 472px;
@@ -12,6 +12,9 @@
   border-radius: 4px;
   z-index: -1;
   position: relative;
+}
+.welcomePhotoImage {
+  z-index: -2;
 }
 .welcomePhotoBtn {
   width: 222px;
@@ -22,7 +25,7 @@
   position: absolute;
   bottom: 85px;
   left: 96px;
-  z-index: 1;
+  z-index: 5;
   color: #e2304f;
   font-family: "Cairo";
   font-style: normal;
@@ -33,6 +36,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
+
 }
 
 .welcomePhotoBtn::after {
