--- a/src/components/MenuSecond/MenuSecond.css
+++ b/src/components/MenuSecond/MenuSecond.css
@@ -49,6 +49,8 @@
   display: flex;
   row-gap: 7px;
   border-radius: 10px;
+  position: relative;
+  z-index: 2;
 }
 .Dropdown-children-ul li {
   transition: all ease-in-out 100ms;
@@ -62,6 +64,7 @@
 
 .Dropdown-children-ul li:hover {
   background-color: #f9f9f9;
+  border-radius: 10px;
 }
 .Dropdown-children-ul-closed {
   display: none;
