--- a/src/components/product/product.css
+++ b/src/components/product/product.css
@@ -1,8 +1,8 @@
 .product {
-  
-    max-width: 246px;
-    max-height: 399px;
+  max-width: 246px;
+  max-height: 399px;
   cursor: pointer;
+  position: relative;
 }
 
 .product img {
@@ -20,10 +20,9 @@
   height: 47px;
   max-width: inherit;
   max-height: inherit;
-white-space: nowrap;
-text-overflow: ellipsis;
-overflow: hidden;
-
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .product-One {
@@ -49,7 +48,6 @@ overflow: hidden;
 
   color: var(--DarkGray);
 }
-
 
 .offerPrice {
   font-family: "Cairo";
@@ -78,7 +76,7 @@ overflow: hidden;
 }
 
 .AddToCart {
-    display: block;
+  display: block;
   width: 245px;
   height: 35px;
   background: var(--InkBlue);
@@ -90,5 +88,23 @@ overflow: hidden;
   line-height: 37px;
 
   color: var(--white100);
-  margin-top: 17px  ;
+  margin-top: 17px;
+}
+
+.productSale-top {
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+.productSale {
+  position: absolute;
+  left: 27px;
+  top: 17px;
+  transform: rotate(-18.119deg);
+  color: var(--bg-shade, #eeeffb);
+  font-family: Cairo;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 200;
+  line-height: normal;
 }
