--- a/src/Pages/product/ProductDetails.css
+++ b/src/Pages/product/ProductDetails.css
@@ -82,7 +82,7 @@
     text-transform: capitalize;
   }
 }
-.ProductDetails-Categories {
+.ProductDetails-Categories a{
   color: #0a4b65;
   font-size: 16px;
   font-family: Cairo;
