--- a/src/Pages/dashboard/Profile/Profile.css
+++ b/src/Pages/dashboard/Profile/Profile.css
@@ -19,26 +19,43 @@
   margin-left: 10px;
 }
 .myInfo-input {
-  flex-basis: 30%;
+  flex-basis: 50%;
   display: flex;
   flex-direction: column;
   align-items: first baseline;
   row-gap: 20px;
   text-transform: uppercase;
 }
+
 .myInfo-input span::after {
   content: ":";
 }
 .myInfo-value {
-  flex-basis: 70%;
+  flex-basis: 50%;
   display: flex;
   flex-direction: column;
   align-items: first baseline;
   row-gap: 20px;
   text-transform: uppercase;
 }
+.myInfo-value span {
+  white-space: normal;
+  word-wrap: break-word;
+  width: 100%;
+  text-align: start;
+}
+
 @media screen and (max-width: 480px) {
   .Profile span {
     font-size: 13px;
+  }
+  .myInfo-value {
+    flex-basis: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: first baseline;
+    row-gap: 20px;
+    text-transform: uppercase;
+    width: 72px;
   }
 }
