--- a/src/Pages/dashboard/Wish/Wish.css
+++ b/src/Pages/dashboard/Wish/Wish.css
@@ -1,4 +1,4 @@
-.cart-h2 {
+.Wishcart-h2 {
   color: #1e1e1e;
   font-size: 18px;
   font-family: Cairo;
@@ -8,7 +8,7 @@
   text-align: start;
   margin-top: 24px;
 }
-.cart-p {
+.Wishcart-p {
   color: #1e1e1e;
   font-size: 14px;
   font-family: Cairo;
@@ -19,24 +19,24 @@
   margin-bottom: 29px;
 }
 
-.cart {
+.Wishcart {
   margin-bottom: 70px;
 }
-.cart-total-product {
+.Wishcart-total-product {
   display: flex;
   flex-direction: row;
   column-gap: 55px;
   justify-content: space-between;
 }
 
-.cart-products {
+.Wishcart-products {
   flex-basis: 70%;
   max-width: 70%;
   display: flex;
   flex-direction: column;
   row-gap: 24px;
 }
-.cart-product-top {
+.Wishcart-product-top {
   display: flex;
   flex-direction: row;
   border-radius: 15px;
@@ -44,14 +44,14 @@
   background: #fff;
   box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.25);
 }
-.cart-product-img-top {
+.Wishcart-product-img-top {
   flex-basis: 15%;
   max-width: 15%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.cart-product {
+.Wishcart-product {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -60,16 +60,16 @@
   justify-content: space-around;
 }
 
-.cart-product-img {
+.Wishcart-product-img {
   height: 100%;
   width: 100%;
   max-width: 80px;
   max-height: 82.286px;
   min-width: 70px;
   border-radius: 15px;
-  margin-left: 3px;
+  margin-left: 9px;
 }
-.cart-product-h4-p {
+.Wishcart-product-h4-p {
   padding-left: 18px;
   text-align: start;
   white-space: nowrap;
@@ -78,7 +78,7 @@
   max-width: 40%;
   flex-basis: 40%;
 }
-.cart-product-h4-p h4 {
+.Wishcart-product-h4-p h4 {
   color: #1e1e1e;
   font-size: 18px;
   font-family: Cairo;
@@ -90,7 +90,7 @@
   overflow: hidden;
   max-width: 100%;
 }
-.cart-product-h4-p p {
+.Wishcart-product-h4-p p {
   color: #1e1e1e;
   font-size: 14px;
   font-family: Cairo;
@@ -103,7 +103,7 @@
   max-width: 100%;
 }
 
-.ProductDetails-Quantity-price-Delete {
+.WishProductDetails-Quantity-price-Delete {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -111,7 +111,7 @@
   flex-basis: 60%;
   max-width: 60%;
 }
-.cart-product-price {
+.Wishcart-product-price {
   color: #393939;
   font-size: 22px;
   font-family: Raleway;
@@ -120,12 +120,12 @@
   line-height: 100%;
 }
 
-.DeleteOutlineIcon {
+.WishDeleteOutlineIcon {
   cursor: pointer;
   color: red;
   transition: all ease-in-out 400ms;
 }
-.DeleteOutlineIcon:hover {
+.WishDeleteOutlineIcon:hover {
   animation: DeleteOutlineIconkeyframes 400ms alternate infinite;
   transform: scale(1.5);
 }
@@ -139,24 +139,24 @@
   }
 }
 
-.cart-product-Quantity .ProductDetails-Quantity {
+.Wishcart-product-Quantity .ProductDetails-Quantity {
   margin-top: 0;
 }
-.cart-product-Quantity .ProductDetails-Quantity input {
+.Wishcart-product-Quantity .ProductDetails-Quantity input {
   color: #fff;
 }
 
 /* input  Quantity */
-.cart-ProductDetails-Quantity {
+.Wishcart-ProductDetails-Quantity {
   width: 65px;
   height: 19.118px;
   display: flex;
   flex-direction: row;
 }
-.cart-ProductDetails-Quantity span {
+.Wishcart-ProductDetails-Quantity span {
   cursor: pointer;
 }
-.cart-ProductDetails-Quantity input {
+.Wishcart-ProductDetails-Quantity input {
   width: 35px;
   height: inherit;
   border: none;
@@ -172,17 +172,17 @@
 }
 
 /* Chrome, Safari, Edge, Opera */
-.cart-ProductDetails-Quantity input::-webkit-outer-spin-button,
-.cart-ProductDetails-Quantity input::-webkit-inner-spin-button {
+.Wishcart-ProductDetails-Quantity input::-webkit-outer-spin-button,
+.Wishcart-ProductDetails-Quantity input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
 
 /* Firefox */
-.cart-ProductDetails-Quantity input[type="number"] {
+.Wishcart-ProductDetails-Quantity input[type="number"] {
   -moz-appearance: textfield;
 }
-.cart-ProductDetails-Quantity-increased {
+.Wishcart-ProductDetails-Quantity-increased {
   width: 15.294px;
   height: 19.118px;
   background: #0d988c;
@@ -190,7 +190,7 @@
   justify-content: center;
   align-items: center;
 }
-.cart-ProductDetails-Quantity-decreased {
+.Wishcart-ProductDetails-Quantity-decreased {
   width: 15.294px;
   height: 19.118px;
   background: #0d988c;
@@ -198,25 +198,25 @@
   justify-content: center;
   align-items: center;
 }
-.cart-ProductDetails-Quantity-decreased img {
+.Wishcart-ProductDetails-Quantity-decreased img {
   position: absolute;
   padding-bottom: 1px;
 }
 
-.cart-total-top {
+.Wishcart-total-top {
   border-radius: 20px;
   background: #565abb;
   flex-basis: 30%;
   max-width: 30%;
 }
 
-.cart-total {
+.Wishcart-total {
   display: flex;
   justify-content: space-around;
   align-items: center;
   margin-top: 20px;
 }
-.cart-total-text {
+.Wishcart-total-text {
   color: #fefcfc;
   font-size: 14px;
   font-family: Cairo;
@@ -224,7 +224,7 @@
   font-weight: 500;
   line-height: normal;
 }
-.cart-total-price {
+.Wishcart-total-price {
   color: #fefcfc;
   text-align: right;
   font-size: 14px;
@@ -233,7 +233,7 @@
   font-weight: 500;
   line-height: normal;
 }
-.cartCheckout {
+.WishcartCheckout {
   border-radius: 12px;
   background: #4de1c1;
   height: 60px;
@@ -251,7 +251,7 @@
   line-height: normal;
   cursor: pointer;
 }
-.reset-cart {
+.Wishreset-cart {
   text-align: center;
   padding: 10px;
   color: red;
@@ -265,11 +265,11 @@
   display: flex;
   align-items: center;
 }
-.reset-cart:hover {
+.Wishreset-cart:hover {
   background: red;
   color: #fff;
 }
-.reset-cart-mobile {
+.Wishreset-cart-mobile {
   display: none;
   text-align: center;
   padding: 10px;
@@ -297,14 +297,15 @@
   color: rgb(13, 152, 140);
   cursor: pointer;
 }
+
 @media screen and (max-width: 728px) {
-  .reset-cart {
+  .Wishreset-cart {
     display: none;
   }
-  .reset-cart-mobile {
+  .Wishreset-cart-mobile {
     display: flex;
   }
-  .cart-total-product {
+  .Wishcart-total-product {
     display: flex;
     flex-direction: column;
     column-gap: 55px;
@@ -313,24 +314,33 @@
     justify-content: space-between;
   }
 
-  .cart-total-top {
+  .Wishcart-total-top {
     border-radius: 20px;
     background: #565abb;
     height: 644px;
     flex-basis: 100%;
     max-width: 100%;
   }
-  .cart-products {
+  .Wishcart-products {
     flex-basis: 100%;
     max-width: 100%;
     display: flex;
     flex-direction: column;
     row-gap: 24px;
   }
+  .Wishcart-product-img {
+    height: 100%;
+    width: 100%;
+    max-width: 80px;
+    max-height: 82.286px;
+    min-width: 70px;
+    border-radius: 15px;
+    margin-left: 9px;
+  }
 }
 
 @media screen and (max-width: 480px) {
-  .cart-product {
+  .Wishcart-product {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -338,26 +348,26 @@
     max-width: 85%;
     justify-content: space-around;
   }
-  .cart-product-h4-p {
+  .Wishcart-product-h4-p {
     flex-basis: 94%;
     max-width: 90%;
   }
-  .ProductDetails-Quantity-price-Delete {
+  .WishProductDetails-Quantity-price-Delete {
     flex-basis: 100%;
     max-width: 100%;
   }
-  .cart-product-img {
+  .Wishcart-product-img {
     height: 100%;
     width: 100%;
     max-width: 80px;
     max-height: 82.286px;
     min-width: 70px;
     border-radius: 15px;
-    margin-left: 28px;
+    padding-left: 28px;
   }
 }
 @media screen and (max-width: 320px) {
-  .cart-ProductDetails-Quantity input {
+  .Wishcart-ProductDetails-Quantity input {
     font-size: 15px;
   }
 }
