--- a/src/Pages/dashboard/Dashboard.css
+++ b/src/Pages/dashboard/Dashboard.css
@@ -9,8 +9,8 @@
 }
 
 .Dashboard-1 {
-  flex-basis: 70%;
-  max-width: 70%;
+  flex-basis: 83%;
+  max-width: 83%;
   border-radius: 0px 25px 25px 0px;
   flex-grow: 1;
   background: #f8f7fc;
@@ -217,6 +217,14 @@
     top: 5px;
     left: 13px;
   }
+  .Dashboard-1 {
+    flex-basis: 70%;
+    max-width: 70%;
+    border-radius: 0px 25px 25px 0px;
+    flex-grow: 1;
+    background: #f8f7fc;
+    order: 2;
+  }
 }
 
 @media screen and (max-width: 600px) {
@@ -256,6 +264,14 @@
   .DashboardMenuOpenIcon svg {
     height: 60px;
     width: 40px;
+  }
+  .Dashboard-1 {
+    flex-basis: 90%;
+    max-width: 90%;
+    border-radius: 0px 25px 25px 0px;
+    flex-grow: 1;
+    background: #f8f7fc;
+    order: 2;
   }
 }
 @media screen and (max-width: 426px) {
