--- a/src/Pages/product/ProductDetails.css
+++ b/src/Pages/product/ProductDetails.css
@@ -17,7 +17,7 @@
   max-width: 15%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: space-evenly;
   max-height: 500px;
   overflow: hidden;
   align-items: center;
@@ -25,10 +25,10 @@
 }
 .ProductDetailsImg img {
   max-height: 155px;
-  max-width: 200px;
+  max-width: 151px;
   cursor: pointer;
   transition: ease-in-out 400ms;
-  object-fit: cover;
+  object-fit: contain;
   width: 100%;
 }
 
@@ -82,7 +82,7 @@
     text-transform: capitalize;
   }
 }
-.ProductDetails-Categories a{
+.ProductDetails-Categories a {
   color: #0a4b65;
   font-size: 16px;
   font-family: Cairo;
@@ -343,15 +343,15 @@
 
   .ProductDetailsImg {
     flex-basis: 100%;
-    max-width: 230px;
+    max-width: 239px;
     display: flex;
     flex-direction: row;
-    max-height: 26px;
+    max-height: 46px;
     margin: auto;
   }
   .ProductDetailsImg img {
-    max-width: 27px;
-    max-height: 26px;
+    max-width: 48px;
+    max-height: 42px;
   }
   .ProductDetailsAction h1 {
     display: none;
